Rewrite of entire bot